<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC LockScreenOff Enabler</string>
    
    <string name="menu_settings">Settings</string>
    <string name="NfcScreenOptionsTitle">Enable NFC, in addition to normal usage when the screen is on, when the:</string>
    <string name="LockedScreenOn">phone is locked, but the screen is on</string>
    <string name="ScreenOff">screen is off (regardless of lock state)</string>
    <string name="DisablePluginTips">To have NFC behaviour return to the default (only enabled when the screen is on and the phone unlocked), either uninstall this mod or disable this module in Xposed Installer.</string>
    <string name="TaglostMessage">Enabled tag lost message</string>
    <string name="play_tag_lost_sound">Play tag lost sound</string>
    <string name="pref_description_play_tag_lost_sound">Play a sound when an NFC tag is lost</string>
    <string name="pref_description_enable_tag_lost_detection">Notify applications when an NFC tag is lost</string>
    <string name="pref_title_enable_nfc_for_lock_state">Enable NFC when</string>
    <string name="copyright_summary">Copyright (C) 2012-2013 - qwerty12\nClick for contributors.</string>
    <string-array name="contributors">
        <item>qwerty12 (Main developer)</item><item >madfish73 (Tag lost support)</item>
        <item >MohammadAG (Minor improvements)</item>
        
    </string-array>
    <string name="contributors_title">Contributors</string>

</resources>